# KnowledgeGraphNavigator

./: .gitignore  Dockerfile  data.py  document_compressor.py  graph.py  instructions.md  interpretabledata_builder.py  interpreter_tranformer.py  main.py  module.py  pyproject.toml  requirements.txt  standard_transformer.py
kgraphs/dataprocessing/: constants.py  data.py  gutenberg_data.py  wikipedia_data.py
kgraphs/lightning/: base_autoregressive.py  base_compressor.py
kgraphs/models/: document_embedding.py  models.py  threestage_compressor.py  transformer.py
kgraphs/net/: __init__.py
kgraphs/queries/: queries.py
kgraphs/utils/: logging.py
misc/: load_to_diff_graphs.sh
misc/fuseki/: config.ttl  tdb_loader.sh
references/: wikipedia_article_json_parse.json
scripts/: README.md  wiki_extractor.py
scripts/recycling_bin/: dump.py  readme.md
