[tool.poetry]
name = "knowledgegraphs"
version = "0.1.0"
description = "Building of knowledge graphs using translational vectors for reasoning interpretability."
authors = ["Luis Garcia <luisgarcia26284@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
transformers = "^4.39.3"
datasets = "^2.18.0"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
wandb = "^0.16.6"
lightning = "^2.3.1"
indexed-bzip2 = "^1.6.0"
lxml = "^5.2.2"


[tool.poetry.group.extras.dependencies]
ipython = "8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
